Fixed the overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -130,7 +130,5 @@
   body {
     @apply bg-background font-space ;
   }
-  html {
-    @apply font-sans;
-  }
+  
 }
